--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Wrap all page content here -->
     <div id="wrap">
-        <header class="masthead">
+        <header class="masthead header-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
@@ -36,39 +36,39 @@
             </div>
         </header>
         <!-- Fixed navbar -->
-        <div class="navbar navbar-custom navbar-inverse navbar-static-top" id="nav">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav nav-justified">
-                        <li><a href="#section1">About</a></li>
-                        <li><a href="#section2">Portfolio</a></li>
-                        <li><a href="#section4">About</a></li>
-                        <li><a href="#section5">Testimonials</a></li>
-                        <li><a href="#section3">Contact</a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Separated link</a></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <!--/.nav-collapse -->
+    <div class="navbar navbar-custom navbar-inverse navbar-static-top" id="nav">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
             </div>
-            <!--/.container -->
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav nav-justified">
+                    <li><a href="#section1">About</a></li>
+                    <li><a href="#section2">Portfolio</a></li>
+                    <li><a href="#section5">Testimonials</a></li>
+                    <li><a href="#section3">Contact</a></li>
+                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">One more separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <!--/.navbar -->
+        <!--/.container -->
+    </div>
+    <!--/.navbar -->
         <!-- Begin page content -->
         <div class="divider" id="section1"></div>
         <div class="container">
             <div class="col-sm-10 col-sm-offset-1">
                 <div class="page-header text-center">
+                    <img class="img-responsive img-circle profile-pic" src="static/img/taygo.png" style="text-align: center" />
                     <h1>A Little Info About Me</h1> </div>
                 <p class="lead text-center"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur. </p>
                 <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus quis dui nec laoreet. Suspendisse metus ligula, eleifend nec purus id, malesuada placerat lorem. Maecenas in diam nibh. Donec nec arcu sed dolor eleifend convallis. Proin sed sapien a nulla bibendum pharetra id at orci. Sed non porta sapien. Sed pretium risus in orci dignissim, id tempus nisi aliquam. Nam tincidunt nisi vitae imperdiet gravida. Donec lacinia nunc leo, vel volutpat elit ultricies vel. Morbi in ex vel velit vestibulum tincidunt ut vitae dolor. Sed blandit sit amet ante sed viverra. Maecenas vitae ante tempor, pulvinar elit a, sodales magna. </p>
