--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <link href="static/css/main.css" rel="stylesheet"> </head>
 
 <body>
+    
+    
     <!-- Wrap all page content here -->
     <div id="wrap">
         <header class="masthead header-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h1><a href="#" title="Bootstrap Template">Taylor Marie Photography</a>
+                        <h1><a href="/index.html#" title="Bootstrap Template">Taylor Marie Photography</a>
           <p class="lead">Tagline Here if you have one</p></h1> </div>
                     <div class="col-sm-6">
                         <!--<div class="pull-right  hidden-xs"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><h3><i class="glyphicon glyphicon-cog"></i></h3></a>
@@ -43,13 +45,13 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav nav-justified">
-                    <li><a href="#section1">About</a></li>
-                    <li><a href="#section2">Portfolio</a></li>
-                    <li><a href="#section5">Testimonials</a></li>
-                    <li><a href="#section3">Contact</a></li>
+                    <li><a href="index.html#section1">About</a></li>
+                    <li><a href="index.html#section2">Portfolio</a></li>
+                    <li><a href="index.html#section5">Testimonials</a></li>
+                    <li><a href="index.html#section3">Contact</a></li>
                     <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
+                            <li><a href="pricing.html">Pricing Packages</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
                             <li><a href="#">Separated link</a></li>
@@ -68,7 +70,7 @@
         <div class="container">
             <div class="col-sm-10 col-sm-offset-1">
                 <div class="page-header text-center">
-                    <img class="img-responsive img-circle profile-pic" src="static/img/taygo.png" style="text-align: center" />
+                    <img class="img-responsive img-circle profile-pic" src="static/img/tay.jpg" style="text-align: center; max-width: 400px; max-height: 400px;">
                     <h1>A Little Info About Me</h1> </div>
                 <p class="lead text-center"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur. </p>
                 <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus quis dui nec laoreet. Suspendisse metus ligula, eleifend nec purus id, malesuada placerat lorem. Maecenas in diam nibh. Donec nec arcu sed dolor eleifend convallis. Proin sed sapien a nulla bibendum pharetra id at orci. Sed non porta sapien. Sed pretium risus in orci dignissim, id tempus nisi aliquam. Nam tincidunt nisi vitae imperdiet gravida. Donec lacinia nunc leo, vel volutpat elit ultricies vel. Morbi in ex vel velit vestibulum tincidunt ut vitae dolor. Sed blandit sit amet ante sed viverra. Maecenas vitae ante tempor, pulvinar elit a, sodales magna. </p>
@@ -239,44 +241,44 @@
                         <div class="carousel-inner">
                             <div class="item active">
                                 <div class="col-md-4 col-sm-6">
-                                    <div class="block-text rel zmin"> <a title="" href="#">Lorem ipsum</a>
+                                    <div class="block-text rel zmin"> <a title="" href="#">"Headline"</a>
                                         <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span> </span>
                                         </div>
-                                        <p>But did you see that ass tho. I'd let her do anything she wanted honestly.</p> <ins class="ab zmin sprite sprite-i-triangle block"></ins> </div>
-                                    <div class="person-text rel"> <img src="static/img/filler2.png" /> <a title="" href="#section5">Charlie</a> <i>United States</i> </div>
+                                        <p>She has a nice butt.</p> <ins class="ab zmin sprite sprite-i-triangle block"></ins> </div>
+                                    <div class="person-text rel"> <img src="static/img/filler2.png" /> <a title="" href="index.html#section5">Charlie</a> <i>United States</i> </div>
                                 </div>
                                 <div class="col-md-4 col-sm-6 hidden-xs">
                                     <div class="block-text rel zmin"> <a title="" href="#">Lorem ipsum</a>
                                         <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star-empty"></span><span data-value="3" class="glyphicon glyphicon-star-empty"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span> </span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, labore, magni illum nemo ipsum quod voluptates ab natus nulla possimus incidunt aut neque quaerat mollitia perspiciatis assumenda asperiores consequatur soluta.</p> <ins class="ab zmin sprite sprite-i-triangle block"></ins> </div>
-                                    <div class="person-text rel"> <img src="static/img/filler2.png" /> <a title="" href="#section5">Ella Mentree</a> <i>United States</i> </div>
+                                    <div class="person-text rel"> <img src="static/img/filler2.png" /> <a title="" href="index.html#section5">Ella Mentree</a> <i>United States</i> </div>
                                 </div>
                                 <div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
-                                    <div class="block-text rel zmin"> <a title="" href="#section5">Lorem ipsum</a>
+                                    <div class="block-text rel zmin"> <a title="" href="index.html#section5">Lorem ipsum</a>
                                         <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span> </span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, labore, magni illum nemo ipsum quod voluptates ab natus nulla possimus incidunt aut neque quaerat mollitia perspiciatis assumenda asperiores consequatur soluta./p> <ins class="ab zmin sprite sprite-i-triangle block"></ins> </div>
-                                    <div class="person-text rel"> <img src="static/img/filler1.png" /> <a title="" href="#section5">Rannynm</a> <i>Indonesia</i> </div>
+                                    <div class="person-text rel"> <img src="static/img/filler1.png" /> <a title="" href="index.html#section5">Rannynm</a> <i>Indonesia</i> </div>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="col-md-4 col-sm-6">
-                                    <div class="block-text rel zmin"> <a title="" href="#section5">Lorem ipsum</a>
+                                    <div class="block-text rel zmin"> <a title="" href="index.html#section5">Lorem ipsum</a>
                                         <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span> </span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, labore, magni illum nemo ipsum quod voluptates ab natus nulla possimus incidunt aut neque quaerat mollitia perspiciatis assumenda asperiores consequatur soluta.</p> <ins class="ab zmin sprite sprite-i-triangle block"></ins> </div>
-                                    <div class="person-text rel"> <img alt="" src="http://myinstantcms.ru/images/img14.png"> <a title="" href="#section5">Anna</a> <i>from Glasgow, Scotland</i> </div>
+                                    <div class="person-text rel"> <img alt="" src="http://myinstantcms.ru/images/img14.png"> <a title="" href="index.html#section5">Anna</a> <i>from Glasgow, Scotland</i> </div>
                                 </div>
                                 <div class="col-md-4 col-sm-6 hidden-xs">
-                                    <div class="block-text rel zmin"> <a title="" href="#section5">Lorem ipsum</a>
+                                    <div class="block-text rel zmin"> <a title="" href="index.html#section5">Lorem ipsum</a>
                                         <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star-empty"></span><span data-value="3" class="glyphicon glyphicon-star-empty"></span><span data-value="4" class="glyphicon glyphicon-star-empty"></span><span data-value="5" class="glyphicon glyphicon-star-empty"></span> </span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, labore, magni illum nemo ipsum quod voluptates ab natus nulla possimus incidunt aut neque quaerat mollitia perspiciatis assumenda asperiores consequatur soluta.</p> <ins class="ab zmin sprite sprite-i-triangle block"></ins> </div>
-                                    <div class="person-text rel"> <img alt="" src="http://myinstantcms.ru/images/img14.png"> <a title="" href="#section5">Ella Mentree</a> <i>United States</i> </div>
+                                    <div class="person-text rel"> <img alt="" src="http://myinstantcms.ru/images/img14.png"> <a title="" href="index.html#section5">Ella Mentree</a> <i>United States</i> </div>
                                 </div>
                                 <div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
-                                    <div class="block-text rel zmin"> <a title="" href="#section5">Lorem ipsum</a>
+                                    <div class="block-text rel zmin"> <a title="" href="index.html#section5">Lorem ipsum</a>
                                         <div class="mark">My rating: <span class="rating-input"><span data-value="0" class="glyphicon glyphicon-star"></span><span data-value="1" class="glyphicon glyphicon-star"></span><span data-value="2" class="glyphicon glyphicon-star"></span><span data-value="3" class="glyphicon glyphicon-star"></span><span data-value="4" class="glyphicon glyphicon-star"></span><span data-value="5" class="glyphicon glyphicon-star"></span> </span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, labore, magni illum nemo ipsum quod voluptates ab natus nulla possimus incidunt aut neque quaerat mollitia perspiciatis assumenda asperiores consequatur soluta.</p> <ins class="ab zmin sprite sprite-i-triangle block"></ins> </div>
