--- a/coming.html
+++ b/coming.html
@@ -57,7 +57,7 @@
                     <div class="col-sm-3">
                         <div class="time-box">
                             <div class="time-box-inner dash days_dash animated" data-animation="rollIn" data-animation-delay="300"> <span class="time-number">
-									<span class="digit">0</span> <span class="digit">0</span> <span class="digit">0</span> </span> <span class="time-name">Days</span> </div>
+									<span class="digit">0</span> <span class="digit">0</span> </span> <span class="time-name">Days</span> </div>
                         </div>
                     </div>
                     <div class="col-sm-3">
