--- a/landing.html
+++ b/landing.html
@@ -24,13 +24,13 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav nav-justified">
-                    <li><a href="#section1">About</a></li>
-                    <li><a href="#section2">Portfolio</a></li>
-                    <li><a href="#section5">Testimonials</a></li>
-                    <li><a href="#section3">Contact</a></li>
+                    <li><a href="index.htmlindex.html#section1">About</a></li>
+                    <li><a href="index.htmlindex.html#section2">Portfolio</a></li>
+                    <li><a href="index.htmlindex.html#section5">Testimonials</a></li>
+                    <li><a href="index.htmlindex.html#section3">Contact</a></li>
                     <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
+                            <li><a href="pricing.html">Pricing Packages</a></li>
                             <li><a href="#">Another action</a></li>
                             <li><a href="#">Something else here</a></li>
                             <li><a href="#">Separated link</a></li>
@@ -48,6 +48,7 @@
     <!-- Full Page Image Background Carousel Header -->
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
+        <img class="img=responsive" src="static/img/tml.png" style="position: absolute; left: 39.4%; max-width: 400px; max-height: 400px; z-index: 5; margin-top: 70px">
         <button class="enter btn btn-primary" onclick="window.location='index.html'">Tell Me More</button>
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -58,19 +59,19 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+                <div class="fill" style="background-image:url(static/img/bg_img.jpg);"></div>
                 <div class="carousel-caption">
                     </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+                <div class="fill" style="background-image:url(static/img/bg_img2.jpg);"></div>
                 <div class="carousel-caption">
                     </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                <div class="fill" style="background-image:url(static/img/bg_img3.jpg);"></div>
                 <div class="carousel-caption">
                     </div>
             </div>
@@ -90,7 +91,7 @@
     
     <script>
     $('.carousel').carousel({
-        interval: 5000 //changes the speed
+        interval: 3000 //changes the speed
     })
     </script>
 </body>
